--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,6 @@ nav {
 
 main {
     max-width: 1200px;
-    padding: 15px;
     margin: auto;
 }
 
@@ -57,6 +56,10 @@ a {
     text-decoration: none;
     color: rgb(57, 255, 255);
     font-weight: bold;
+}
+
+p{
+    padding:10px;
 }
 
 #paul-neon {
