--- a/css/style.css
+++ b/css/style.css
@@ -142,7 +142,10 @@ footer ul {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 75px;
-    padding: 10px;
+    padding: 0;
+    padding-top:15px;
+    padding-bottom:15px;
+    margin:0;
 }
 
 #languages img {
