--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -24,10 +24,30 @@ notes: CSS style for Capytech portfolio
     padding-bottom: 25px;
 }
 
+#banking-sys-protoype-img{
+    border-radius: 20px;
+    -webkit-filter: drop-shadow(0 0 10px #000000);
+    filter: drop-shadow(0 0 10px #000000);
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    padding: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    width: 325px;
+}
+
 @media (min-width:720px) {
     .video {
         width: 100%;
         max-width: 650px;
+        margin: auto;
+    }
+    #banking-sys-protoype-img{
+        width: 100%;
+        max-width: 850px;
+        display: flex;
+        justify-content: center;
         margin: auto;
     }
 }
