--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -17,6 +17,24 @@ notes: CSS style for Capytech portfolio
     align-items: center;
 }
 
+.portfolio-img {
+    width: 325px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    border-radius: 15px;
+    transition: all 0.3s ease;
+}
+
+.portfolio-img:hover {
+    transform: scale(1.05);
+    transition: all 0.3s ease;
+}
+
+
+
 #portfolio-main h1 {
     margin: 0;
     padding: 0;
@@ -40,10 +58,14 @@ notes: CSS style for Capytech portfolio
 #art-gallery-img {
     width: 325px;
     border-radius: 10px;
-    margin-left: 10px;
 }
 
 @media (min-width:720px) {
+    .portfolio-img {
+        max-height: 325px;
+        width: auto;
+    }
+
     .video {
         width: 100%;
         max-width: 650px;
@@ -64,5 +86,29 @@ notes: CSS style for Capytech portfolio
         display: flex;
         justify-content: center;
         margin: auto;
+    }
+
+    #current-projects-section {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    #current-projects-section article {
+        margin: 10px;
+        border: solid white 2px;
+        border-radius: 5px;
+        padding: 10px;
+    }
+
+    #pygames-section {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    #pygames-section article {
+        margin: 10px;
+        border: solid white 2px;
+        border-radius: 5px;
+        padding: 10px;
     }
 }
