--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ nav {
 main {
     flex: 1;
     max-width: 1200px;
+    padding-left: 10px;
 }
 
 h1 {
@@ -107,6 +108,15 @@ footer ul {
     background-color: rgb(23, 48, 80);
 }
 
+.lang-icon {
+    transition: all 0.3s ease;
+}
+
+.lang-icon:hover {
+    transform: scale(1.2);
+    transition: all 0.3s ease;
+}
+
 #top-bar {
     display: flex;
     justify-content: space-between;
@@ -137,7 +147,12 @@ footer ul {
     padding-top: 20px;
     padding-bottom: 20px;
     width: 325px;
+    transition: all 0.3s ease;
+}
 
+#paul-neon:hover {
+    transform: scale(1.1);
+    transition: all 0.3s ease;
 }
 
 #languages {
