--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,8 @@ footer ul {
     background-color: rgb(38, 38, 116);
     color: white;
     border: solid 2px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 @media (min-width:720px) {
