40th commit - resize grid layouts and add canvas border

--- a/css/portfolio-style.css
+++ b/css/portfolio-style.css
@@ -63,6 +63,7 @@ notes: CSS style for Capytech portfolio
 @media (min-width:720px) {
     .portfolio-img {
         max-height: 325px;
+        max-width: 325px;
         width: auto;
     }
 
