--- a/css/style.css
+++ b/css/style.css
@@ -1,288 +1,421 @@
-@charset "utf-8";
 /*
 author: capytech
 date: October 20, 2022
 version: 1.2
 notes: CSS style for Capytech home, portfolio, articles, about, contact
 */
-
 @import url(normalize.css);
 @import url(portfolio-style.css);
 @import url(articles-style.css);
-
 @font-face {
-    font-family: 'zero-hour';
-    src: url(../font/zero-hour.otf);
+  font-family: "zero-hour";
+  src: url(../font/zero-hour.otf);
 }
-
 html {
-    box-sizing: border-box;
-    background: linear-gradient(to right, rgb(0, 0, 8), rgb(4, 13, 92));
-    color: white;
-    font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
+  background: linear-gradient(to right, rgb(0, 0, 8), rgb(4, 13, 92));
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 * {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 header {
-    background-color: rgb(0, 7, 65);
-    position: sticky;
-    top: 0;
-    z-index: 1000;
+  background-color: rgb(0, 7, 65);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 }
 
 nav {
-    flex: 1;
-    display: none;
+  flex: 1;
+  display: none;
 }
 
 main {
-    flex: 1;
-    max-width: 1200px;
-    padding-left: 10px;
+  flex: 1;
+  max-width: 1200px;
+  padding-left: 10px;
 }
 
 h1 {
-    font-family: 'zero-hour';
-    font-size: 1.75rem;
-    letter-spacing: 10px;
-    font-weight: normal;
-    text-align: center;
-    width: 100%;
-    padding-top: 10px;
-    padding-bottom: 10px;
+  font-family: "zero-hour";
+  font-size: 1.75rem;
+  letter-spacing: 10px;
+  font-weight: normal;
+  text-align: center;
+  width: 100%;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 a {
-    text-decoration: none;
-    color: rgb(57, 255, 255);
-    font-weight: bold;
+  text-decoration: none;
+  color: rgb(57, 255, 255);
+  font-weight: bold;
 }
 
 p {
-    padding-top: 10px;
-    padding-bottom: 10px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 footer ul {
-    width: 250px;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  width: 250px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .show {
-    display: block;
+  display: block;
 }
 
 .hamburger-menu {
-    display: block;
-    background-color: transparent;
-    border: none;
-    font-size: 1.3rem;
-    color: white;
-    cursor: pointer;
-    padding-right: 12px;
-    transition: all 0.3s ease;
+  display: block;
+  background-color: transparent;
+  border: none;
+  font-size: 1.3rem;
+  color: white;
+  cursor: pointer;
+  padding-right: 12px;
+  transition: all 0.3s ease;
 }
 
 .hamburger-menu:hover {
-    background-color: rgb(29, 34, 80);
-    border-radius: 15px;
+  background-color: rgb(29, 34, 80);
+  border-radius: 15px;
 }
 
 .nav-link {
-    display: block;
-    line-height: 40px;
-    text-align: center;
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-    border-radius: 10px;
-    transition: all 0.3s ease;
+  display: block;
+  line-height: 40px;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 10px;
+  transition: all 0.3s ease;
 }
 
 .nav-link:hover {
-    background-color: rgb(23, 48, 80);
+  background-color: rgb(23, 48, 80);
 }
 
 .lang-icon {
-    transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .lang-icon:hover {
-    transform: scale(1.2);
-    transition: all 0.3s ease;
+  transform: scale(1.2);
+  transition: all 0.3s ease;
 }
 
 #capytech-icon {
-    max-width: 60px;
-    padding: 5px;
-    padding-left: 10px
+  max-width: 60px;
+  padding: 5px;
+  padding-left: 10px;
 }
 
 #top-bar {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 #nav-ul {
-    display: block;
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  display: block;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 #wrapper {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    max-width: 1900px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  max-width: 1900px;
 }
 
 #paul-neon {
-    border-radius: 20px;
-    -webkit-filter: drop-shadow(0 0 10px #000000);
-    filter: drop-shadow(0 0 10px #000000);
-    display: flex;
-    justify-content: center;
-    margin: auto;
-    padding: 0;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    width: 325px;
-    transition: all 0.3s ease;
+  border-radius: 20px;
+  filter: drop-shadow(0 0 10px #000000);
+  display: flex;
+  justify-content: center;
+  margin: auto;
+  padding: 0;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  width: 325px;
+  transition: all 0.3s ease;
 }
 
 #paul-neon:hover {
-    transform: scale(1.1);
-    transition: all 0.3s ease;
+  transform: scale(1.1);
+  transition: all 0.3s ease;
 }
 
 #languages {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 15px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 15px;
 }
 
 #languages img {
-    max-width: 75px;
+  max-width: 75px;
 }
 
 footer {
-    display: block;
-    width: 50%;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px;
+  display: block;
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px;
 }
 
 footer ul {
-    margin: auto;
+  margin: auto;
 }
 
 #buttons {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    max-width: 300px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  max-width: 300px;
 }
 
 #buttons button {
-    margin: 5px;
-    background-color: rgb(38, 38, 116);
-    color: white;
-    border: solid 2px;
-    padding-top: 15px;
-    padding-bottom: 15px;
+  margin: 5px;
+  background-color: rgb(38, 38, 116);
+  color: white;
+  border: solid 2px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 #canvas {
-    border: solid white 2px;
+  border: solid white 2px;
 }
 
-@media (min-width:720px) {
-
-    header {
-        display: flex;
-    }
-
-    nav {
-        display: flex;
-        justify-content: space-between;
-
-    }
-
-    header nav ul {
-        display: flex;
-        flex: 1;
-        list-style: none;
-        justify-content: right;
-        margin: 15px;
-    }
-
-    h1 {
-        font-size: 2rem;
-        letter-spacing: 15px;
-    }
-
-    main {
-        margin: auto;
-    }
-
-    .nav-link {
-        padding: 15px 15px;
-        font-size: 1rem;
-    }
-
-    .hamburger-menu {
-        display: none;
-    }
-
-    #capytech-icon {
-        max-width: 80px;
-        padding: 5px;
-        padding-left: 10px
-    }
-
-    #nav-ul {
-        display: flex;
-        flex: 1;
-        justify-content: right;
-        min-width: 400px;
-        margin: 0px;
-    }
-
-    #footer-wrapper1 {
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    #languages {
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-gap: 75px;
-        padding: 0;
-        padding-top: 15px;
-        padding-bottom: 15px;
-        margin: 0;
-    }
-
-    #paul-neon {
-        width: 100%;
-        max-width: 650px;
-        display: flex;
-        justify-content: center;
-        margin: auto;
-    }
-
-    #copyright {
-        text-align: center;
-    }
+#container {
+  display: inline-block;
+  position: relative;
+  border: 2px solid black;
 }
 
+#container2 {
+  background: linear-gradient(to bottom, rgb(29, 50, 143), black);
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  opacity: 0;
+  pointer-events: none;
+  z-index: 10;
+}
+
+#enemy-name {
+  font-size: 14px;
+  padding: 2px;
+}
+
+#enemy-hp {
+  position: relative;
+}
+
+#enemy-hp-bar-max {
+  height: 5px;
+  background-color: grey;
+  margin: 2px;
+}
+
+#enemy-hp-bar-actual {
+  height: 5px;
+  background-color: rgb(39, 211, 39);
+  position: absolute;
+  margin-left: 2px;
+  margin-right: 2px;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#player-name {
+  font-size: 14px;
+  padding: 2px;
+}
+
+#player-hp {
+  position: relative;
+}
+
+#player-hp-bar-max {
+  height: 5px;
+  background-color: grey;
+  margin: 2px;
+}
+
+#player-hp-bar-actual {
+  height: 5px;
+  background-color: rgb(39, 211, 39);
+  position: absolute;
+  margin-left: 2px;
+  margin-right: 2px;
+  top: 0;
+  left: 0;
+  right: 0;
+}
+
+#battle-ui {
+  background: linear-gradient(to right, blue, black);
+  color: white;
+  height: 60px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  border-top: 2px solid white;
+  display: flex;
+}
+
+#battle-menu {
+  width: 66.66%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  background: linear-gradient(to right, blue, black);
+  color: white;
+}
+
+#attack-type {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 33.33%;
+  border-left: 2px solid white;
+}
+
+#attack-type h1 {
+  font-size: 16px;
+}
+
+#battle-msg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(to right, blue, black);
+  color: white;
+  padding: 15px;
+  display: none;
+  cursor: pointer;
+}
+
+#user-interface {
+  display: none;
+}
+
+#enemy-stats {
+  background-color: white;
+  width: 125px;
+  height: 75px;
+  position: absolute;
+  top: 55px;
+  left: 170px;
+  border: 4px solid black;
+}
+
+#player-stats {
+  background-color: white;
+  width: 125px;
+  height: 75px;
+  position: absolute;
+  top: 55px;
+  left: 10px;
+  border: 4px solid black;
+}
+
+@media (min-width: 720px) {
+  header {
+    display: flex;
+  }
+  nav {
+    display: flex;
+    justify-content: space-between;
+  }
+  header nav ul {
+    display: flex;
+    flex: 1;
+    list-style: none;
+    justify-content: right;
+    margin: 15px;
+  }
+  h1 {
+    font-size: 2rem;
+    letter-spacing: 15px;
+  }
+  main {
+    margin: auto;
+  }
+  .nav-link {
+    padding: 15px 15px;
+    font-size: 1rem;
+  }
+  .hamburger-menu {
+    display: none;
+  }
+  #capytech-icon {
+    max-width: 80px;
+    padding: 5px;
+    padding-left: 10px;
+  }
+  #nav-ul {
+    display: flex;
+    flex: 1;
+    justify-content: right;
+    min-width: 400px;
+    margin: 0px;
+  }
+  #footer-wrapper1 {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  #languages {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 75px;
+    padding: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin: 0;
+  }
+  #paul-neon {
+    width: 100%;
+    max-width: 650px;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+  }
+  #copyright {
+    text-align: center;
+  }
+  #enemy-stats {
+    top: 125px;
+    left: 490px;
+  }
+  #player-stats {
+    top: 125px;
+    left: 50px;
+  }
+  #battle-ui {
+    height: 120px;
+  }
+}
 @media (min-width: 1024px) {
-    #languages {
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-    }
+  #languages {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  }
+  #enemy-stats {
+    left: 800px;
+  }
 }
