--- a/css/style.css
+++ b/css/style.css
@@ -317,23 +317,25 @@ footer ul {
 }
 
 #enemy-stats {
-  background-color: white;
+  background-color: rgba(38, 38, 131, 0.75);
+  color: white;
   width: 125px;
   height: 75px;
   position: absolute;
   top: 55px;
   left: 170px;
-  border: 4px solid black;
+  border: 4px solid white;
 }
 
 #player-stats {
-  background-color: white;
+  background-color: rgba(38, 38, 131, 0.75);
+  color: white;
   width: 125px;
   height: 75px;
   position: absolute;
   top: 55px;
   left: 10px;
-  border: 4px solid black;
+  border: 4px solid white;
 }
 
 @media (min-width: 720px) {
