--- a/css/style.scss
+++ b/css/style.scss
@@ -19,8 +19,9 @@ notes: CSS style for Capytech home, portfolio, articles, about, contact
 
 $hp-actual-color: rgb(39, 211, 39);
 
-@mixin stats-style($background-color, $width, $height, $position, $top, $left, $border) {
+@mixin stats-style($background-color, $color, $width, $height, $position, $top, $left, $border) {
     background-color: $background-color;
+    color: $color;
     width: $width;
     height: $height;
     position: $position;
@@ -334,11 +335,11 @@ footer ul {
 }
 
 #enemy-stats {
-    @include stats-style(white, 125px, 75px, absolute, 55px, 170px, 4px solid black);
+    @include stats-style(rgb(38, 38, 131, 0.75), white, 125px, 75px, absolute, 55px, 170px, 4px solid white);
 }
 
 #player-stats {
-    @include stats-style(white, 125px, 75px, absolute, 55px, 10px, 4px solid black);
+    @include stats-style(rgb(38, 38, 131, 0.75), white, 125px, 75px, absolute, 55px, 10px, 4px solid white);
 }
 
 @media (min-width:720px) {
