--- a/css/style.css
+++ b/css/style.css
@@ -2,247 +2,9 @@
 author: capytech
 date: October 20, 2022
 version: 1.2
-notes: CSS style for Capytech home, portfolio, articles, about, contact
+notes: Tailwind CSS
 */
-@import url(normalize.css);
-@import url(portfolio-style.css);
-@import url(articles-style.css);
-@font-face {
-  font-family: "zero-hour";
-  src: url(../font/zero-hour.otf);
-}
-html {
-  box-sizing: border-box;
-  background: linear-gradient(to right, rgb(0, 0, 8), rgb(4, 67, 92));
-  color: white;
-  font-family: Arial, Helvetica, sans-serif;
-}
 
-* {
-  box-sizing: inherit;
-}
-
-header {
-  background-color: rgb(3, 39, 53);
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-}
-
-nav {
-  flex: 1;
-  display: none;
-}
-
-main {
-  flex: 1;
-  max-width: 1000px;
-  padding-left: 5px;
-}
-
-h1 {
-  font-family: "zero-hour";
-  font-size: 1.75rem;
-  letter-spacing: 10px;
-  font-weight: normal;
-  text-align: center;
-  width: 100%;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-a {
-  text-decoration: none;
-  color: rgb(57, 255, 255);
-  font-weight: bold;
-}
-
-p {
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-footer ul {
-  width: 250px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-.show {
-  display: block;
-}
-
-.hamburger-menu {
-  display: block;
-  background-color: transparent;
-  border: none;
-  font-size: 2.5rem;
-  color: white;
-  cursor: pointer;
-  padding-right: 12px;
-  transition: all 0.3s ease;
-}
-
-.hamburger-menu:hover {
-  background-color: rgb(29, 34, 80);
-  border-radius: 15px;
-}
-
-.nav-link {
-  display: block;
-  line-height: 40px;
-  text-align: center;
-  color: white;
-  text-decoration: none;
-  font-weight: bold;
-  border-radius: 10px;
-  transition: all 0.3s ease;
-}
-
-.nav-link:hover {
-  background-color: rgb(23, 48, 80);
-}
-
-.lang-icon {
-  transition: all 0.3s ease;
-}
-
-.lang-icon:hover {
-  transform: scale(1.2);
-  transition: all 0.3s ease;
-}
-
-#capytech-icon {
-  max-width: 60px;
-  padding: 5px;
-  padding-left: 10px;
-}
-
-#top-bar {
-  display: flex;
-  justify-content: space-between;
-}
-
-#nav-ul {
-  display: block;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-#wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-#paul-neon {
-  border-radius: 20px;
-  filter: drop-shadow(0 0 10px #000000);
-  display: flex;
-  justify-content: center;
-  margin: auto;
-  padding: 0;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  width: 325px;
-  transition: all 0.3s ease;
-}
-
-#paul-neon:hover {
-  transform: scale(1.1);
-  transition: all 0.3s ease;
-}
-
-#languages {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 15px;
-}
-
-#languages img {
-  max-width: 75px;
-}
-
-footer {
-  display: block;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 10px;
-}
-
-footer ul {
-  margin: auto;
-}
-
-@media (min-width: 720px) {
-  header {
-    display: flex;
-  }
-  nav {
-    display: flex;
-    justify-content: space-between;
-  }
-  header nav ul {
-    display: flex;
-    flex: 1;
-    list-style: none;
-    justify-content: right;
-    margin: 15px;
-  }
-  h1 {
-    font-size: 2rem;
-    letter-spacing: 15px;
-  }
-  main {
-    margin: auto;
-  }
-  .nav-link {
-    padding: 15px 15px;
-    font-size: 1rem;
-  }
-  .hamburger-menu {
-    display: none;
-  }
-  #capytech-icon {
-    max-width: 80px;
-    padding: 5px;
-    padding-left: 10px;
-  }
-  #nav-ul {
-    display: flex;
-    flex: 1;
-    justify-content: right;
-    min-width: 400px;
-    margin: 0px;
-  }
-  #footer-wrapper1 {
-    display: flex;
-    justify-content: space-evenly;
-  }
-  #languages {
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 75px;
-    padding: 0;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    margin: 0;
-  }
-  #paul-neon {
-    width: 100%;
-    max-width: 650px;
-    display: flex;
-    justify-content: center;
-    margin: auto;
-  }
-  #copyright {
-    text-align: center;
-  }
-}
-@media (min-width: 1024px) {
-  #languages {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
