--- a/css/style.css
+++ b/css/style.css
@@ -17,17 +17,21 @@ notes: Tailwind CSS
     font-style: normal;
 }
 
+.tertiary-font {
+    font-family: 'Lekton', sans-serif;
+}
+
 #paul {
     overflow: hidden;
     /* Ensures the content is not revealed until the animation */
-    border-right: .15em solid orange;
+    border-right: .05em solid orange;
     /* The typwriter cursor */
     white-space: nowrap;
     /* Keeps the content on a single line */
     margin: 0 auto;
     /* Gives that scrolling effect as the typing happens */
     animation:
-        typing 3.5s steps(40, end),
+        typing 2.0s steps(30, end),
         blink-caret .75s step-end infinite;
 }
 
@@ -37,7 +41,7 @@ notes: Tailwind CSS
     }
 
     to {
-        width: 100%
+        width: 57%
     }
 }
 
