--- a/css/style.css
+++ b/css/style.css
@@ -26,35 +26,34 @@ main {
 
 #paul {
     overflow: hidden;
-    /* Ensures the content is not revealed until the animation */
     border-right: .05em solid orange;
-    /* The typwriter cursor */
     white-space: nowrap;
-    /* Keeps the content on a single line */
-    margin: 0 auto;
-    /* Gives that scrolling effect as the typing happens */
     animation:
         typing 2.0s steps(30, end),
         blink-caret .75s step-end infinite;
 }
 
-@keyframes typing {
-    from {
-        width: 0
-    }
-
-    to {
-        width: 57%
-    }
+.myName{
+    overflow: hidden;
+    border-right: .05em solid orange;
+    white-space: nowrap;
+    animation:
+        blink-caret .75s step-end infinite;
 }
 
-@keyframes blink-caret {
+/* .intro {
+    overflow: hidden;
+    border-right: .05em solid orange;
+    white-space: nowrap;
+    animation:
+        blink-caret .75s step-end;
+} */
 
+@keyframes blink-caret {
     from,
     to {
         border-color: transparent
     }
-
     50% {
         border-color: orange;
     }
